# OpenLockr

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/openlockr/: FirebaseSync.java  MainActivity.java  NativeBridge.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
native/: CMakeLists.txt
native/src/: core.c  core.h
native/src/crypto/: aes.c  aes.h
native/src/storage/: localdb.c  localdb.h
native/src/utils/: base64.c  base64.h
